# yalr

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  PLAN.md  README.md  config.yaml  docker-compose.yml
.github/workflows/: docker-build.yml
admin/: package.json
admin/src/: App.tsx  index.css
admin/src/api/: client.ts
admin/src/context/: ThemeContext.tsx
admin/src/layout/: Layout.tsx
admin/src/pages/: ApiKeys.tsx  Chat.tsx  Config.tsx  Dashboard.tsx  Login.tsx  Metrics.tsx  Providers.tsx  Setup.tsx  UserDetail.tsx  Users.tsx
admin/src/types/: index.ts
migrations/: 20240101000001_initial_schema.sql  20240421000001_add_name_to_routing_config.sql  20240422000001_add_backing_model_to_routing_config.sql  20240424000001_add_provider_type.sql
src/: config.rs  lib.rs  metrics.rs  state.rs
src/api/: handlers.rs  mod.rs  server.rs  ws.rs
src/auth/: admin.rs  api_key.rs  api_keys.rs  mod.rs  nip98.rs
src/db/: mod.rs  schema.rs
src/providers/: llamacpp.rs  mod.rs  ollama.rs  openai.rs  provider_trait.rs  vllm.rs
src/router/: detector.rs  engine.rs  mod.rs  model_info.rs
src/router/strategies/: mod.rs  round_robin.rs
tests/: metrics_tests.rs  mod.rs  router_tests.rs
